--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/rowSelection"
-        android:inputType="textCapCharacters"/>
+        android:inputType="textCapCharacters"
+        android:maxLength="1"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -43,7 +44,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/seatSelection"
-        android:inputType="number"/>
+        android:inputType="number"
+        android:maxLength="3"/>
 
     <Button
         android:layout_height="wrap_content"
