--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <item name="seat_user_font" type="color">#000</item>
     <item name="seat_background" type="color">#555</item>
 
+    <color name="black_overlay">#66000000</color>
 
 </resources>
