--- a/app/src/main/res/layout/seat_taken.xml
+++ b/app/src/main/res/layout/seat_taken.xml
@@ -3,6 +3,7 @@
     android:layout_height="match_parent"
     android:background="@color/seat_taken_background"
     android:layout_margin="1dp"
+    android:layout_weight="1"
     tools:context=".StadiumView">
 
 </LinearLayout>
