--- a/app/src/main/res/layout/seat_user.xml
+++ b/app/src/main/res/layout/seat_user.xml
@@ -1,6 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools" android:layout_width="10dp"
+    android:layout_height="10dp"
     android:background="@color/seat_taken_background"
     android:layout_margin="1dp"
     tools:context=".StadiumView" >
